@@ -1,3 +1,2 @@
-DIST sundtek-tv-20090913.pdf 40767 SHA256 89c63affc25759a96c23331170a22ba1148f632e7ceb22383cf8ff0b29b499d3 SHA512 38245d485f4cde1deac55252fe070f0167ee3e8b52dc30d1ac2594a5f19ffb14054051f2dfe76bde64f7485d2c975850264adcde4575cc8b397eb0948a118e00 WHIRLPOOL 295c039be49b0b2c77358f0a9aebca621f9c1ddc0491182028bdc1fb24e84ab6ca07f32e1f69638c92c1939d328dad69e63be947fd403e896bbbee737e59dc38
-DIST sundtek-tv-amd64-20140321.tar.gz 1241224 SHA256 5a13c4b4cb884c337e97a53fae5407852d25954d402c3df33847fe9d5d341b38 SHA512 cdc0852bc60c0a8bc7ed019b54b567cb543e4cac3785c8ebc22546b2110581270689214bca7e0705799beccb6c77d8c064a2069bb07c502b3d23216cec06d089 WHIRLPOOL f2d12ee885d36d6e16b3f24cdd9edec373be6b8f433bcedd44219d9ee0322c38d1ed2d2c85c3a0a2af92e888691958e48a2b068cbad936c0093b53192192f430
-DIST sundtek-tv-x86-20140321.tar.gz 1163874 SHA256 10bad38ab09a95666ab2092641871123d6d3ca666a9020fbf1d3bbde880ea80a SHA512 b2d97e5e18519ef589f66d0f86e8d41def83f4cd7abaed4ee7e5582fd288c9335e5277f1a6356ec6a4f6714ae8b16cbc29e97655da4da49c07a9554c8701276f WHIRLPOOL 74f6b75503530ef107701a615d95ed4fdfcb4a1a581cefb59af2280826ca8f9732ed6fc86381c4ce4a0785a7f1def9642c5ab4d813111b01919add70a2ebb861
+DIST sundtek-tv-amd64-20140402.tar.gz 1242185 SHA256 317cdbc21214779e378fef793ab7621afd69fd65c9a4aa61ac2d8e4441b667d2 SHA512 186a6a5afa14ccd6bb667706fda65dbf1ac7b33b20dfc22dc5c11d499445f6ddb6bc5e07ebcd27590734a95dd029c97693042c37efa7a17ea30dc44fa9ddd93d WHIRLPOOL 40ae733158df9ff3d6483c6712357e37d0e5099d8a23005f0bd615b2af14ee8196b1e71c15c3a8809609f7ef9107d14097ffff3ec3c1c8184632db54c4d344c4
+DIST sundtek-tv-x86-20140402.tar.gz 1164616 SHA256 d2e2932e2f44e0667b99351a46e4b0c4e586fead3162ddba07b0d12b4df48b8d SHA512 8a90895502f2908f7a3b164042e22466f35748165f5e648a825206feeca1d88c70276d36bb7b4b17badb837fb11a0d5e80fbb81421b0a83b20ff20306ec936fe WHIRLPOOL 1e39359252fde35c55d0d6cbe9ac163a9e48ceb0e8fc54c30bdfaf489d90302a8d6f4c4b2d8c7b6ec3f2f4d7aa0129e39ba60b85331eefb4b4a0b5e8748805da
