@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sundtek-tv-20140402 (13 Apr 2014)
+
+  13 Apr 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Remove IUSE=doc
+
 *sundtek-tv-20140321-r1 (17 Feb 2014)
 
   30 Mar 2014; Martin Väth <martin@mvath.de>:
